Agregando html desde js

--- a/index.html
+++ b/index.html
@@ -19,246 +19,7 @@
         </div>
       </nav>
       <div class="main container-fluid p-0">
-        <div class="cardsContainer m-0">
-            <!--Goku-->
-            <div class="card p-0 my-2 mx-2">
-                <img src="./img/Goku/goku1.jpg" alt="">
-                <div class="card-body">
-                    <h5 class="card-title">Goku SSJ3</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary"> Agregar al carrito</a>
-                </div>
-            </div>
-            <div class="card p-0 my-2 mx-2">
-                <img src="./img/Goku/goku2.jpg" alt="">
-                <div class="card-body">
-                    <h5 class="card-title">Goku Ultra Instinct</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary"> Agregar al carrito</a>
-                </div>
-            </div>
-            <div class="card p-0 my-2 mx-2">
-                <img src="./img/Goku/goku3.jpg" alt="">
-                <div class="card-body">
-                    <h5 class="card-title">Goku SSJ2</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary"> Agregar al carrito</a>
-                </div>
-            </div>
-            <div class="card p-0 my-2 mx-2">
-                <img src="./img/Goku/goku4.jpg" alt="">
-                <div class="card-body">
-                    <h5 class="card-title">Goku Genkidama</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary"> Agregar al carrito</a>
-                </div>
-            </div>
-
-            <!--Vegeta-->
-            <div class="card p-0 my-2 mx-2">
-                <img src="./img/Vegeta/vegeta1.jpg" alt="">
-                <div class="card-body">
-                    <h5 class="card-title">Majin Vegeta</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary"> Agregar al carrito</a>
-                </div>
-            </div>
-            <div class="card p-0 my-2 mx-2">
-                <img src="./img/Vegeta/vegeta2.jpg" alt="">
-                <div class="card-body">
-                    <h5 class="card-title">Vegeta Big Bang Attack</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary"> Agregar al carrito</a>
-                </div>
-            </div>
-            <div class="card p-0 my-2 mx-2">
-                <img src="./img/Vegeta/vegeta3.jpg" alt="">
-                <div class="card-body">
-                    <h5 class="card-title">Vegeta Final Flash</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary"> Agregar al carrito</a>
-                </div>
-            </div>
-            <div class="card p-0 my-2 mx-2">
-                <img src="./img/Vegeta/vegeta4.jpg" alt="">
-                <div class="card-body">
-                    <h5 class="card-title">Vegeta SSJB</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary"> Agregar al carrito</a>
-                </div>
-            </div>
-
-            <!--Broly-->
-            <div class="card p-0 my-2 mx-2">
-                <img src="./img/Broly/broly1.jpg" alt="">
-                <div class="card-body">
-                    <h5 class="card-title">Broly Berserk Fists</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary"> Agregar al carrito</a>
-                </div>
-            </div>
-            <div class="card p-0 my-2 mx-2">
-                <img src="./img/Broly/broly2.jpg" alt="">
-                <div class="card-body">
-                    <h5 class="card-title">Broly SSJ</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary"> Agregar al carrito</a>
-                </div>
-            </div>
-            <div class="card p-0 my-2 mx-2">
-                <img src="./img/Broly/broly3.jpg" alt="">
-                <div class="card-body">
-                    <h5 class="card-title">Broly Omega Blaster</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary"> Agregar al carrito</a>
-                </div>
-            </div>
-            <div class="card p-0 my-2 mx-2">
-                <img src="./img/Broly/broly4.jpg" alt="">
-                <div class="card-body">
-                    <h5 class="card-title">Broly SSJL</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary"> Agregar al carrito</a>
-                </div>
-            </div>
-
-            <!--Vegetto-->
-            <div class="card p-0 my-2 mx-2">
-                <img src="./img/Vegetto/vegetto1.jpg" alt="">
-                <div class="card-body">
-                    <h5 class="card-title">Vegetto SSJB Final Kamehameha</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary"> Agregar al carrito</a>
-                </div>
-            </div>
-            <div class="card p-0 my-2 mx-2">
-                <img src="./img/Vegetto/vegetto2.jpg" alt="">
-                <div class="card-body">
-                    <h5 class="card-title">Vegetto Kick</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary"> Agregar al carrito</a>
-                </div>
-            </div>
-            <div class="card p-0 my-2 mx-2">
-                <img src="./img/Vegetto/vegetto3.jpg" alt="">
-                <div class="card-body">
-                    <h5 class="card-title">Vegetto SSJB</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary"> Agregar al carrito</a>
-                </div>
-            </div>
-            <div class="card p-0 my-2 mx-2">
-                <img src="./img/Vegetto/vegetto4.jpg" alt="">
-                <div class="card-body">
-                    <h5 class="card-title">Vegetto SSJB Ki Sword</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary"> Agregar al carrito</a>
-                </div>
-            </div>
-
-            <!--Gogeta-->
-            <div class="card p-0 my-2 mx-2">
-                <img src="./img/Gogeta/gogeta1.jpg" alt="">
-                <div class="card-body">
-                    <h5 class="card-title">Gogeta Stardust Breaker</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary"> Agregar al carrito</a>
-                </div>
-            </div>
-            <div class="card p-0 my-2 mx-2">
-                <img src="./img/Gogeta/gogeta2.jpg" alt="">
-                <div class="card-body">
-                    <h5 class="card-title">Gogeta SSJ4 Kamehameha</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary"> Agregar al carrito</a>
-                </div>
-            </div>
-            <div class="card p-0 my-2 mx-2">
-                <img src="./img/Gogeta/gogeta3.jpg" alt="">
-                <div class="card-body">
-                    <h5 class="card-title">Gogeta SSJB</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary"> Agregar al carrito</a>
-                </div>
-            </div>
-            <div class="card p-0 my-2 mx-2">
-                <img src="./img/Gogeta/gogeta4.jpg" alt="">
-                <div class="card-body">
-                    <h5 class="card-title">Gogeta SSJB Stardust Breaker</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary"> Agregar al carrito</a>
-                </div>
-            </div>
-
-            <!--Gohan-->
-            <div class="card p-0 my-2 mx-2">
-                <img src="./img/Gohan/gohan1.jpg" alt="">
-                <div class="card-body">
-                    <h5 class="card-title">Gohan Kaio</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary"> Agregar al carrito</a>
-                </div>
-            </div>
-            <div class="card p-0 my-2 mx-2">
-                <img src="./img/Gohan/gohan2.jpg" alt="">
-                <div class="card-body">
-                    <h5 class="card-title">Future Gohan</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary"> Agregar al carrito</a>
-                </div>
-            </div>
-            <div class="card p-0 my-2 mx-2">
-                <img src="./img/Gohan/gohan3.jpg" alt="">
-                <div class="card-body">
-                    <h5 class="card-title">Ultimate Gohan</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary"> Agregar al carrito</a>
-                </div>
-            </div>
-            <div class="card p-0 my-2 mx-2">
-                <img src="./img/Gohan/gohan4.jpg" alt="">
-                <div class="card-body">
-                    <h5 class="card-title">Goku-Gohan Father-Son Kamehameha</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary"> Agregar al carrito</a>
-                </div>
-            </div>
-            <!--Trunks-->
-            <div class="card p-0 my-2 mx-2">
-                <img src="./img/Trunks/trunks1.jpg" alt="">
-                <div class="card-body">
-                    <h5 class="card-title">Future Trunks</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary"> Agregar al carrito</a>
-                </div>
-            </div>
-            <div class="card p-0 my-2 mx-2">
-                <img src="./img/Trunks/trunks2.jpg" alt="">
-                <div class="card-body">
-                    <h5 class="card-title">Future Trunks LH</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary"> Agregar al carrito</a>
-                </div>
-            </div>
-            <div class="card p-0 my-2 mx-2">
-                <img src="./img/Trunks/trunks3.jpg" alt="">
-                <div class="card-body">
-                    <h5 class="card-title">Future Trunks SSJ Ki</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary"> Agregar al carrito</a>
-                </div>
-            </div>
-            <div class="card p-0 my-2 mx-2">
-                <img src="./img/Trunks/trunks4.jpg" alt="">
-                <div class="card-body">
-                    <h5 class="card-title">Future Trunks SSJ Sword</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                    <a href="#" class="btn btn-primary"> Agregar al carrito</a>
-                </div>
-            </div>
-            
-
-
+        <div class="cardsContainer m-0" id="mainContainer">
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
