--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="logoFull">
                 <img src="./img/logo.png" alt="logo de la tienda">
             </div>
-            <input type="text" placeholder="Buscar...">
+            <input type="text" id="search" placeholder="Buscar...">
             </input>
         </div>
       </nav>
