Agregando el carrito

--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
             <div class="logoFull">
                 <img src="./img/logo.png" alt="logo de la tienda">
             </div>
+            <div class="userCart">
+                <img src="./img/cart.png" alt="carrito logo" id="cartView">
+                <p class="px-3" id="cartPrice">$0.00</p>
+            </div>
             <input type="text" id="search" placeholder="Buscar...">
             </input>
         </div>
