--- a/index.html
+++ b/index.html
@@ -11,19 +11,19 @@
 <body>
     <nav class="navbar navbarP m-0 p-0">
         <div class="container-fluid m-0 px-5">
-            <div class="logoFull">
+            <div class="logoFull" id="logoHome">
                 <img src="./img/logo.png" alt="logo de la tienda">
             </div>
             <div class="userCart">
                 <img src="./img/cart.png" alt="carrito logo" id="cartView">
-                <p class="px-3" id="cartPrice">$0.00</p>
+                <p class="px-3" id="cartPrice">$0</p>
             </div>
             <input type="text" id="search" placeholder="Buscar...">
             </input>
         </div>
       </nav>
       <div class="main container-fluid p-0">
-        <div class="cardsContainer m-0" id="mainContainer">
+        <div class="cardsContainer m-auto row" id="mainContainer">
         </div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
