Error en Sugar Syntax

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
                 <img src="./img/cart.png" alt="carrito logo" id="cartView">
                 <p class="px-3" id="cartPrice">$0</p>
             </div>
-            <input type="text" id="search" placeholder="Buscar...">
+            <input type="text" class="searchClass" id="search" placeholder="Buscar...">
             </input>
         </div>
       </nav>
-      <div class="main container-fluid p-0">
+      <div class="main container-fluid pt-5 mt-5">
         <div class="cardsContainer m-auto row" id="mainContainer">
         </div>
     </div>
