--- a/index.html
+++ b/index.html
@@ -17,10 +17,13 @@
             <div class="logoFull" id="logoHome">
                 <img src="./img/logo.png" alt="logo de la tienda">
             </div>
+            
             <div class="userCart">
+                <button id="easterEggBtn" class="easterEggClass">?</button>
                 <img src="./img/cart.png" alt="carrito logo" id="cartView">
                 <p class="px-3" id="cartPrice">$0</p>
             </div>
+            <button class="btnPayClass btn-success" id="btnPay">Confirmar Compra</button>
             <input type="text" class="searchClass" id="search" placeholder="Buscar...">
             </input>
         </div>
@@ -30,6 +33,7 @@
         <div class="cardsContainer m-auto row" id="mainContainer">
         </div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/cleave.js@1.6.0/dist/cleave.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
